# jalmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.txt.example
docs/diagrams/: entity.puml  functional.puml  main.puml  output.puml
migrations/: 1_initialize_db.sql  2_add_discography.sql  3_is_favorite.sql  3_track_url.sql
script/: add_data.py  artist.csv  artist_playlist.csv  artist_track.csv  playlist.csv  playlist_track.csv  track.csv
src/: AddQueueButton.cpp  AddQueueButton.hpp  Artist.cpp  Artist.hpp  ArtistBuilder.cpp  ArtistBuilder.hpp  ArtistsPage.cpp  ArtistsPage.hpp  DeleteQueueButton.cpp  DeleteQueueButton.hpp  DownQueueButton.cpp  DownQueueButton.hpp  DurationLabel.cpp  DurationLabel.hpp  Entity.cpp  Entity.hpp  EntityButton.cpp  EntityButton.hpp  EntityGridButton.cpp  EntityGridButton.hpp  EntityListButton.cpp  EntityListButton.hpp  FavoriteButton.cpp  FavoriteButton.hpp  HomePage.cpp  HomePage.hpp  IndexLabel.cpp  IndexLabel.hpp  LyricsPage.cpp  LyricsPage.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MediaPlayer.cpp  MediaPlayer.hpp  MediaQueue.cpp  MediaQueue.hpp  MediaSlider.cpp  MediaSlider.hpp  Navigator.cpp  (+38 more)
